# src/routes/customer.route.js
@@ -8,9 +8,20 @@ import { userAuth} from '../middlewares/auth.middleware';
 const router = express.Router();
 
 //route to Add book into Cart
-router.post('/createCostumer',userAuth,CustomerValidator,customerController.createCustomer);
+router.post('/createCustomer', userAuth, customerController.createCustomer);
 
 //route to get all Cart items
-router.get('/getAllCostumer',customerController.getAllCustomer);
+router.get('/getAllCustomer',userAuth, customerController.getAllCustomer);
 
 export default router;
+
+
+  // "addressType":"parmennt",
+  //   "fullAddress":"maithil house ratanpur girdhsri",
+  //   "city":"bhopal",
+  //   "landmark":"mata temple",
+  //   "state":"punjab",
+  //   "name":"govind maithil",
+  //   "phoneNumber":"86024425245",
+  //   "pincode":"464662",
+  //   "locality":"sanchi"
