# src/routes/wishlist.route.js
@@ -5,9 +5,11 @@ import { userAuth} from '../middlewares/auth.middleware';
 
 const router = express.Router();
 //route to Add book into Cart
-router.post('/:_id', userAuth ,wishlistController.addWishList);
+router.post('/:_id',userAuth, wishlistController.addWishList);
 
 //route to get all Cart items
-router.get('/getAllwishList',wishlistController.getAllWishlist);
+router.get('/getAllwishList',userAuth,wishlistController.getAllWishlist);
+
+router.delete('/:_id',userAuth, wishlistController.deleteWishlist);
 
 export default router;
