# src/swagger/swagger.json
@@ -23,7 +23,7 @@
         "application/json"
     ],
     "paths": {
-        "/users/register": {
+        "/users/signUp": {
             "post": {
                 "tags": [
                     "users"
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/users/login": {
+        "/users/signIn": {
             "post": {
                 "tags": [
                     "users"
@@ -64,7 +64,7 @@
                         "in": "body",
                         "description": "login Detals",
                         "schema": {
-                            "$ref": "#/definitions/login"
+                            "$ref": "#/definitions/signIn"
                         }
                     }
                 ],
@@ -115,10 +115,10 @@
                 ]
             }
         },
-        "/books/getallbook/": {
+        "/books/getallBook/": {
             "get": {
                 "tags": [
-                    "Notes"
+                    "Books"
                 ],
                 "summary": "Get all Books",
                 "produces": [
@@ -180,116 +180,6 @@
                         "JWT": []
                     }
                 ]
-            },
-            "put": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Update Book by id",
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "_id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "Update",
-                        "in": "body",
-                        "description": "Update Book by their id",
-                        "required": false,
-                        "type": "string",
-                        "schema": {
-                            "$ref": "#/definitions/createbook"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Book updated successfully"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Delete a Book",
-                "description": "Delete Book",
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "_id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": "Delete Book by their id",
-                        "schema": {
-                            "$ref": "#/definitions/createbook"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Note deleted successfully"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
-            }
-            
-        },
-        "/carts/createcart": {
-            "post": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Create a new Cart ",
-                "produces": [],
-                "parameters": [
-                    {
-                        "name": "Create a new Cart ",
-                        "in": "body",
-                        "description": "Create a new cart",
-                        "required": false,
-                        "type": "string",
-                        "schema": {
-                            "$ref": "#/definitions/createcart"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "New cart created succesfully"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
             }
         },
         "/carts/getAllCart/": {
@@ -323,22 +213,231 @@
                 ]
             }
         },
-        "/costumers/createCostumer": {
+        "/carts/{_id}": {
             "post": {
                 "tags": [
-                    "Costumer"
+                    "Carts"
                 ],
-                "summary": "Create a new Costumer ",
-                "produces": [],
+                "summary": "Add Book into Cart",
+                "produces": [
+                    "application/json"
+                ],
                 "parameters": [
                     {
-                        "name": "Create a new Costumer ",
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Id",
+                        "required": true,
+                        "type": "string",
+                        "schema": {
+                            "$ref": "#/definitions/createcart"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Single Book fetched succesfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": ["Carts"],
+                "summary": "Update quantity ",
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Update",
                         "in": "body",
-                        "description": "Create a new costumer",
+                        "description": "Update quantity by their id",
                         "required": false,
                         "type": "string",
                         "schema": {
-                            "$ref": "#/definitions/createcostumer"
+                            "$ref": "#/definitions/createcart"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Note updated successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Carts"
+                ],
+                "summary": "Delete cart Book",
+                "description": "Delete cart Book",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string",
+                        "description": "Delete Book by their id",
+                        "schema": {
+                            "$ref": "#/definitions/createcart"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": " deleted cart successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/wishLists/getAllwishList/": {
+            "get": {
+                "tags": [
+                    "WishList"
+                ],
+                "summary": "Get all WishList",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Get all WishList",
+                        "description": "Get all Wishlist for User",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "All wishList fetched successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/wishLists/{_id}/": {
+            "post": {
+                "tags": [
+                    "WishList"
+                ],
+                "summary": "Add book into Wishlist",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Id",
+                        "required": true,
+                        "type": "string",
+                        "schema": {
+                            "$ref": "#/definitions/createWishList"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Single Book fetched succesfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "WishList"
+                ],
+                "summary": "Delete  Wishlist a Book",
+                "description": "Delete wishList Book",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string",
+                        "description": "Delete Book by their id",
+                        "schema": {
+                            "$ref": "#/definitions/createWishList"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": " deleted wishlist successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/orders/addOrder": {
+            "post": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Create a Order ",
+                "produces": [],
+                "parameters": [
+                    {
+                        "name": "Create a order ",
+                        "in": "body",
+                        "description": "Create order",
+                        "required": false,
+                        "type": "string",
+                        "schema": {
+                            "$ref": "#/definitions/Order"
                         }
                     }
                 ],
@@ -357,25 +456,59 @@
                 ]
             }
         },
-        "/costumers/getAllCostumer/": {
+        "/customers/createCustomer": {
+            "post": {
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Create a new Customer ",
+                "produces": [],
+                "parameters": [
+                    {
+                        "name": "Create a new Customer ",
+                        "in": "body",
+                        "description": "Create a new customer",
+                        "required": false,
+                        "type": "string",
+                        "schema": {
+                            "$ref": "#/definitions/Customer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "New Costumer created succesfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/customers/getAllCustomer/": {
             "get": {
                 "tags": [
-                    "Costumer"
+                    "Customer"
                 ],
-                "summary": "Get all Costumer",
+                "summary": "Get all Customer",
                 "produces": [
                     "application/json"
                 ],
                 "parameters": [
                     {
-                        "name": "Get all Costumer",
-                        "description": "Get all Costumer for User",
+                        "name": "Get all Customer",
+                        "description": "Get all Customer for User",
                         "required": false
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "All Costumer fetched successfully"
+                        "description": "All Customer fetched successfully"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -414,7 +547,7 @@
                 }
             }
         },
-        "login": {
+        "signIn": {
             "type": "object",
             "properties": {
                 "email": {
@@ -454,9 +587,6 @@
         "createcart": {
             "type": "object",
             "properties": {
-                "userId": {
-                    "type": "String"
-                },
                 "books": [
                     {
                         "productId": {
@@ -490,41 +620,86 @@
                 }
             }
         },
-        "createcostumer": {
+        "createWishList": {
             "type": "object",
             "properties": {
-                "userId": {
-                    "type": "String"
-                },
-                "costumer": [{
-                    "addressType": {
-                        "type": "String"
-                    },
-                    "fullAddress": {
-                        "type": "String"
-                    },
-                    "city": {
-                        "type": "String"
-                    },
-                    "landmark": {
-                        "type": "String"
-                    },
-                    "state": {
-                        "type": "String"
-                    },
-                    "name": {
-                        "type": "String"
-                    },
-                    "phoneNumber": {
-                        "type": "String"
-                    },
-                    "pincode": {
-                        "type": "String"
-                    },
-                    "locality": {
-                        "type": "String"
+                "books": [
+                    {
+                        "productId": {
+                            "type": "String"
+                        },
+                        "description": {
+                            "type": "String"
+                        },
+                        "bookName": {
+                            "type": "String"
+                        },
+                        "bookImage": {
+                            "type": "String"
+                        },
+                        "author": {
+                            "type": "String"
+                        },
+                        "price": {
+                            "type": "Number"
+                        }
                     }
-                }]
+                ],
+                "cart_total": {
+                    "type": "Number"
+                },
+                "isPurchased": {
+                    "type": "Boolean"
+                }
+            }
+        },
+        "Customer": {
+            "type": "object",
+            "properties": {
+                "addressType": {
+                    "type": "string"
+                },
+                "fullAddress": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "landmark": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "pincode": {
+                    "type": "string"
+                },
+                "locality": {
+                    "type": "string"
+                }
+            }
+        },
+        "Order": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": ""
+                },
+                "product_name": {
+                    "type": ""
+                },
+                "product_quantity": {
+                    "type": ""
+                },
+                "product_price": {
+                    "type": ""
+                }
             }
         }
     }
